# spark-ann

./: .dockerignore  .gitignore  .gitmodules  README.md  build.sbt  docker-compose.yml  guide.md  todo.md
api-server/: Dockerfile
api-server/src/main/resources/: application.conf  logback.xml
api-server/src/test/resources/: application.conf
api-server/src/test/scripts/: e2e-test.sh
docs/: BUNDLE_SPEC.md  GETSTART.md  api-design.md  phase1-implementation.md
docs/design/: ann_design_doc_ch1.md  ann_design_doc_ch2.md  ann_design_doc_ch3.md  ann_design_doc_ch4.md  ann_design_doc_ch5.md  ann_design_doc_ch6-9.md  ann_implementation_plan.md
docs/design/ui/: web-ui-design.md
docs/log/: day1_summary.md  day2_summary.md
examples/: README.md
examples/python/: 01_build_and_search.py  02_batch_search.py  03_dataframe_methods.py  04_clustered_routing.py  05_id_column_preservation.py  05_pk_preservation.py
examples/scala/: 01_build_and_search.scala  02_batch_search.scala
examples/shell/: 06_bundle_online_serving.sh  run_e2e_smoke.sh
python/: README.md  pyproject.toml
python/src/spark_ann/: __init__.py  _bridge.py  _dataframe.py  api.py
python/tests/: conftest.py  test_api.py  test_dataframe.py
web-ui/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
web-ui/src/: App.tsx  index.css  main.tsx
web-ui/src/api/: client.ts  hooks.ts
web-ui/src/components/dashboard/: IndexList.tsx  QuickSearch.tsx  StatsCard.tsx
web-ui/src/pages/: Dashboard.tsx  Indexes.tsx  Search.tsx  Settings.tsx
web-ui/src/types/: api.ts
(+134 files in other folders)
